- split usages of modern Path.of() api to use older desugaring-compatible Path.get() api when running on Android