@@ -29,6 +29,7 @@ import lombok.extern.slf4j.Slf4j;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.time.temporal.ChronoUnit;
@@ -258,7 +259,9 @@ public class BackupService {
                 .replace(Persistence.EXTENSION, "")
                 .replace("_store", "");
         // We don't use `resolve` as we use it in unit test which need to be OS independent.
-        return Path.of(dataDir.toString() + relativeBackupDirString);
+        // Using Paths.get() directly as this is a static utility method used in tests
+        // where FacadeProvider may not be initialized
+        return Paths.get(dataDir.toString() + relativeBackupDirString);
     }
 
     @VisibleForTesting
